update user API
